--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "hash",
     "detector",
     "md5",
-    "sha"
+    "sha",
+    "ripemd"
   ],
   "files": [
     "index.js"
@@ -35,6 +36,7 @@
     "p-any": "^1.1.0",
     "p-timeout": "^2.0.1",
     "pify": "^3.0.0",
+    "ripemd-regex": "^1.0.0",
     "sha-regex": "^1.0.2"
   }
 }
