--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "index.js"
   ],
   "devDependencies": {
-    "ava": "*"
+    "ava": "^1.2.1"
   },
   "dependencies": {
     "arrify": "^1.0.1",
